--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
 
   <!-- Application scripts -->
   <script src="js/app.js"></script>
-  <script src="js/config/init.js"></script>
+  <script src="js/config/initialTemplate.js"></script>
   <script src="js/config/routing.js"></script>
   <script src="js/config/localStorage.js"></script>
   <script src="js/controllers/appController.js"></script>
@@ -28,6 +28,7 @@
   <script src="js/controllers/countDownController.js"></script>
   <script src="js/filters/secondsToTime.js"></script>
   <script src="js/factories/media.js"></script>
+  <script src="js/config/phaseTemplate.js"></script>
 
   <!-- External libs -->
   <script src="lib/angular-local-storage/dist/angular-local-storage.min.js"></script>
