--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
   <script src="js/controllers/timerSetController.js"></script>
   <script src="js/controllers/phaseController.js"></script>
   <script src="js/controllers/countDownController.js"></script>
+  <script src="js/controllers/resetController.js"></script>
   <script src="js/filters/secondsToTime.js"></script>
   <script src="js/factories/media.js"></script>
   <script src="js/config/phaseTemplate.js"></script>
